# Starccm

./: .gitignore  README.md  extract_cgns_pressure.py  map_cgns_pressure_to_inp.py  pyproject.toml
packaging/: README.md  build_exe.ps1
starccm_pressure/: __init__.py  extract_cgns_pressure.py  inp_parser.py  map_cgns_pressure_to_inp.py  mapping_gui.py  optional_deps.py
tests/: test_extract_cgns_pressure.py  test_map_cgns_pressure_to_inp.py  test_project_configuration.py
