[project]
name = "starccm-pressure-tools"
version = "0.1.0"
description = "STAR-CCM+ CGNS pressure extraction and Abaqus INP mapping utilities"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "h5py",
]

[project.optional-dependencies]
speed = [
    "scipy",
]
dev = [
    "pyinstaller",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["starccm_pressure*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "UP", "B"]
ignore = ["E501"]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
